syntax = "proto3";

option go_package = "github.com/NamanZelawat/go_test_api/";

package image;

import "google/api/annotations.proto";


service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply) {
        option (google.api.http) = {
            post: "/v1/example/echo"
            body: "*"
        };
    }
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}